--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,10 +20,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  carousel_slider: ^0.0.7
-  #image_picker: ^0.6.1+8
+  #carousel_slider: ^0.0.7
+#  image_picker: ^0.6.1+8
   dio: ^1.0.9
-
+  #cached_network_image: ^1.1.2+1
 dev_dependencies:
   flutter_test:
     sdk: flutter
